i think i fixed svgs on mobile???

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -89,12 +89,13 @@ html, body{
         margin-top: 1.5rem;
     }
     .name{
-        position: absolute;
-        bottom: 5%;
-        left: 0;
-        right: 0;
+        // position: absolute;
+        // bottom: 5%;
+        // left: 0;
+        // right: 0;
         text-align: center;
         margin-bottom: 0;
+        margin-top: -3rem;
     }
     #name{
         // font-size: 4vw;
@@ -228,6 +229,7 @@ html, body{
         display: flex;
         padding-bottom: 5rem;
         div.image-container{
+            box-sizing: border-box;
             height: 100vh;  
             display: flex;
             flex-direction: column;
